[WIP] Set up a Gradle build for the CLC

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-/.build/downloads
-/.build/eclipse
-/.gradle
-/.idea
-/build
+/.build/downloads/
+/.build/eclipse/
+/.gradle/
+/.idea/
 
-bin
+bin/
+build/
 
 *.iml
